# doomv2

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  MODERNIZATION_PLAN.md  README.TXT
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  audio-smoke-checklist.md  interactive-play-checklist.md
docs/oracle/: BASELINE_PROVENANCE.md  IWAD_PIN.md  ORACLE_STRATEGY.md  SEAM_CONTRACTS.md  demo-contract.md  wad-directory.tsv
linuxdoom-1.10/: d_main.c  d_net.c  doomdef.h  doomtype.h  f_finale.c  g_game.c  g_game.h  i_video.h  m_fixed.c  m_menu.c  m_misc.c  p_doors.c  p_floor.c  p_map.c  p_maputl.c  p_mobj.c  p_pspr.c  p_saveg.c  p_sight.c  r_data.c  r_things.c  w_wad.c  z_zone.c
platform/posix/: i_net_posix.c
platform/sdl/: i_sound_sdl.c  i_system_sdl.c  i_video_sdl.c
platform/stub/: i_net_stub.c  i_sound_stub.c  i_system_stub.c  i_video_stub.c
tests/fixtures/: net_loopback.checksum  parity.checksum  parity.frame  parity.lmp
tests/harness/: demo_parity.sh  demo_regen.sh  frame_smoke.sh  net_loopback.sh  palette_lut.sh
tests/parity/: g_parity.c  g_parity.h
tools/: gen_demo.py  gen_netscript.py  package_release.sh  wad_oracle.py
